# vbot_ros2_msgs

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
camera_msgs/: CMakeLists.txt  package.xml
camera_msgs/msg/: Isp2AStatus.msg  JpegRequest.msg  JpegResponse.msg
camera_msgs/srv/: GenerateGdcBin.srv  GetJpegImages.srv  LoadStereoCalibration.srv
dvr_msgs/: CMakeLists.txt  package.xml
dvr_msgs/msg/: DvrStatus.msg
dvr_msgs/srv/: DeleteSession.srv  GetPlaybackUrl.srv  GetSessionList.srv  RemoveRecords.srv  SetDvrEnabled.srv
firmware_version_msgs/: CMakeLists.txt  package.xml
firmware_version_msgs/msg/: DeviceType.msg  FirmwareVersion.msg  FirmwareVersionGroup.msg  FirmwareVersions.msg
firmware_version_msgs/srv/: GetFirmwareVersion.srv
foxglove_msgs/: CMakeLists.txt  package.xml
foxglove_msgs/msg/: CompressedVideo.msg  FaultTypeArray.msg  FaultTypeStatus.msg  TimeMetricHeader.msg  TriggerEvent.msg  TriggerNotify.msg
foxglove_msgs/srv/calibration/: EolCalibReq.srv
function_msgs/: CMakeLists.txt  package.xml
function_msgs/action/: ContextWatch.action  GoalNav.action  RcpTask.action
function_msgs/msg/: AgentToSpeechAudioRaw.msg  AsrResult.msg  BodyActionStatus.msg  ChargingAlignmentStatus.msg  ContextEvent.msg  ContextKeySchema.msg  ContextSnapShot.msg  ContextUpdate.msg  DagStatus.msg  EmotionStatus.msg  FollowStatus.msg  FunctionStatus.msg  HeadActionStatus.msg  InteractionRuleSwitches.msg  KeyValue.msg  LightStatus.msg  NavigationStatus.msg  OmniResult.msg  PayloadStatus.msg  RampStatus.msg  RcpStatus.msg  RuleSwitchEntry.msg  RunningStatus.msg  SpeakStatus.msg  StereoTagDetection.msg  SystemStatus.msg  TraceEvent.msg
function_msgs/srv/: BaseAction.srv  BaseTrigger.srv  ControlFollowing.srv  FunctionInput.srv  GetContext.srv  GetContextSchema.srv  GetGuard.srv  GetInstantEstimatorStatus.srv  HimlocoControl.srv  NavigateToTarget.srv  OmniPrompt.srv  SemanticNavQuery.srv  SetContext.srv  SetFollowSpeed.srv  SetLoop.srv  SetProactive.srv  SetRuleSwitches.srv  SetRunMode.srv  SetSpeak.srv  SetTractionUserParam.srv  SystemControl.srv
lowlevel_msg/: CMakeLists.txt  package.xml
lowlevel_msg/msg/: BmsState.msg  DiskUsage.msg  DiskUsageArray.msg  HeadCmd.msg  IMUDebug.msg  LowCmd.msg  LowState.msg  LowlevelFeedback.msg  LowlevelMetrics.msg  LowlevelMetricsItem.msg  MotorCmd.msg  MotorState.msg  PlatformState.msg  ProcessStat.msg  ProcessStats.msg  ServoStatus.msg  ServoStatuses.msg
lowlevel_msg/srv/: FrameRecording.srv  GetLowState.srv  HeadAction.srv
monitor_msgs/: CMakeLists.txt  package.xml
monitor_msgs/msg/: TopicStats.msg  TopicStatsArray.msg
peripheral_msgs/: CMakeLists.txt  package.xml
peripheral_msgs/msg/: DisplayInfo.msg  GnssRaw.msg  ShowImg.msg  SignalQuality.msg  TouchState.msg
peripheral_msgs/srv/: BacklightCtrl.srv  DisplayImgs.srv  EfuseControl.srv  FanControl.srv  FanSpeed.srv  FillLight.srv  GetLightStatus.srv  GetSupportedEmotions.srv  LightControl.srv  LightGradient.srv  PlayEmotion.srv  QueryState.srv  WifiControl.srv
slam_msgs/: CMakeLists.txt  package.xml
slam_msgs/msg/: CalibStatus.msg  SlamStatus.msg
slam_msgs/srv/: CalibParam.srv  CalibParamDownload.srv  CalibParamUpload.srv  EgoPose.srv  FactoryCalib.srv  GetPathToTarget.srv  QueryMap.srv  SetSlamMode.srv
software_msgs/: CMakeLists.txt  package.xml
software_msgs/action/: DownloadPackage.action
software_msgs/msg/: AdcInfo.msg  AgentService.msg  CounterDebounce.msg  DataLoopTrigger.msg  FaultInfo.msg  FaultList.msg  FaultStatus.msg  FaultStatusArray.msg  FaultStatusBase.msg  KeyValueArray.msg  LocomotionEvent.msg  LocomotionStatus.msg  LogBatch.msg  OTAItem.msg  ProcessStateChange.msg  ProcessStateChangeList.msg  StateChangeNtfy.msg  StateChangePre.msg  StateConfirm.msg  SystemStateMachineStatus.msg  TimerDebounce.msg
software_msgs/srv/: AgentSvc.srv  ClearFaults.srv  CommonEvent.srv  CounterDebounceArray.srv  ExecuteCommand.srv  ExecuteOTA.srv  FaultArray.srv  GetFaultsCount.srv  GetFaultsInfo.srv  GetFgState.srv  GetInitMachineStateTransResult.srv  LowlevelAction.srv  ProfileSnapshot.srv  ReportExecutionState.srv  ReportOTAStatus.srv  ReportState.srv  RestartProcess.srv  SetFgState.srv  SetPowerSaving.srv  SetState.srv  TimerDebounceArray.srv  TriggerMcap.srv  TriggerOTA.srv  TriggerUploader.srv  UpdateEeprom.srv
speech_msgs/: CMakeLists.txt  package.xml
speech_msgs/msg/: ChatTtsNotification.msg  CommandWord.msg  SpeechDogToPhone.msg  SpeechListenEvent.msg  SpeechPhoneToDog.msg  WakeupInfo.msg
speech_msgs/srv/: AudioLoopbackTest.srv  AuthActivate.srv  CommandWord.srv  ImmeaudioControl.srv  MusicRecordControl.srv  SpeechControl.srv  SpeechTextData.srv  VoiceprintControl.srv  VolumeControl.srv
topic_header_msgs/: CMakeLists.txt  package.xml
topic_header_msgs/msg/: TopicDependency.msg  TopicHeader.msg
uwb_location/: CMakeLists.txt  package.xml
uwb_location/msg/: UWB.msg
uwb_msgs/: CMakeLists.txt  package.xml
uwb_msgs/msg/: Status.msg
uwb_msgs/srv/: Pair.srv
vision_msgs/: CMakeLists.txt  package.xml
vision_msgs/msg/: ClipItem.msg  HumanDetectionStatus.msg  PoseDetection.msg  PoseKeypoint.msg  SegmentationDetections2D.msg
vision_msgs/srv/: GetPoseDetection.srv
